--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,22 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  flutter_gen: ^5.8.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  
+  # Core dependencies for SwiftWallet
+  shared_preferences: ^2.2.2
+  path_provider: ^2.1.1
+  share_plus: ^7.2.1
+  intl: ^0.20.2
+  sqflite: ^2.3.0
+  pdf: ^3.10.4
+  google_fonts: ^6.1.0
 
 dev_dependencies:
   flutter_test:
@@ -56,6 +68,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  # Enable generation of localized Strings from arb files.
+  generate: true
 
   # To add assets to your application, add an assets section, like this:
   # assets:
